--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div class="container">
             <h2 class="logo">NETFLIX</h2>
             <nav>
-                <a href="index.html">Início</a>
-                <a href="series.html">Séries</a>
+                <a href="./index.html">Início</a>
+                <a href="./series.html">Séries</a>
                 <a href="#">Filmes</a>
                 <a href="#">Documentários</a>
             </nav>
@@ -40,10 +40,12 @@
                         <i class="fas fa-play"></i>
                         ASSISTIR AGORA
                     </button>
-                    <button role="button" class="botao" onclick="goToDetailPage()">
-                        <i class="fas fa-info-circle"></i>
+                    <a href="./moreinfo.html">
+                        <button role="button" class="botao" onclick="goToDetailPage()">
+                            <i class="fas fa-info-circle"></i>
                         MAIS INFORMAÇÕES
-                    </button>
+                        </button>
+                    </a>
                 </div>
             </div>
         </div>
