--- a/series.html
+++ b/series.html
@@ -22,8 +22,8 @@
         <div class="container">
             <h2 class="logo">NETFLIX</h2>
             <nav>
-                <a href="index.html">Início</a>
-                <a href="series.html">Séries</a>
+                <a href="./index.html">Início</a>
+                <a href="./series.html">Séries</a>
                 <a href="#">Filmes</a>
                 <a href="#">Documentários</a>
             </nav>
